# game-of-greed

./: README.md  bots.py  pyproject.toml
game_of_greed/: banker.py  game.py  game_logic.py
tests/version_1/: test_banker.py  test_calculate_score.py  test_roll_dice.py
tests/version_2/: test_sim_basic.py
tests/version_3/: test_get_scorers.py  test_sim_advanced.py  test_validate_keepers.py
tests/version_4/: complete.sim.txt  test_game_complete.py
