[tool.poetry]
name = "game-of-greed"
version = "0.1.0"
description = ""
authors = ["Ediberto Ponce <ediberto01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
